tests/baselines/reference/asyncFunctionDeclaration6_es2017.errors.txt
asyncFunctionDeclaration6_es2017.ts(1,24): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncFunctionDeclaration6_es2017.ts(1,29): error TS1109: Expression expected.


==== asyncFunctionDeclaration6_es2017.ts (2 errors) ====
    async function foo(a = await): Promise<void> {
                           ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                ~
!!! error TS1109: Expression expected.
    }